kubernetes/applications/matrix/synapse/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: matrix
  labels:
    app.kubernetes.io/name: matrix
    app.kubernetes.io/part-of: everlab
