kubernetes/applications/matrix/synapse/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matrix-synapse
  namespace: matrix
  labels:
    app.kubernetes.io/name: matrix
    app.kubernetes.io/part-of: everlab
spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: matrix

  ports:
    - name: http
      port: 8008
      targetPort: http
      protocol: TCP

    - name: metrics
      port: 9000
      targetPort: metrics
      protocol: TCP
