kubernetes/applications/matrix/synapse/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: matrix
  namespace: matrix
  labels:
    app.kubernetes.io/name: matrix
    app.kubernetes.io/part-of: everlab
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: everlab-gateway
      namespace: gateway

  hostnames:
    - matrix.prod.everlab.dev

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - group: ""
          kind: Service
          name: matrix-synapse
          port: 8008
          weight: 1
